# datares2025

./: .adc.json  .envrc  .gitignore  README.md  asset_nn.py  asset_parse.py  guides_neural_net.py  issues.txt  pyproject.toml  results.json  rl_prompt_optimizer.py  sunny_nn.py  training_logs.jsonl  training_logs.jsonl.20250524-022953.backup  training_logs.jsonl.20250524-023117.backup  training_logs.jsonl.20250524-023237.backup  training_logs.jsonl.20250524-023411.backup  training_logs.jsonl.20250524-023535.backup  training_logs.jsonl.20250524-023708.backup  training_logs.jsonl.20250524-023841.backup  training_logs.jsonl.20250524-024005.backup  training_logs.jsonl.20250524-024130.backup  training_logs.jsonl.20250524-024305.backup  training_logs.jsonl.20250524-024437.backup  training_logs.jsonl.20250524-024602.backup  training_logs.jsonl.20250524-024727.backup  training_logs.jsonl.20250524-024904.backup  training_logs.jsonl.backup  training_logs_update.jsonl
api/: pyproject.toml
api/api/application/: app.py
api/api/application/assets/: models.py  routes.py
api/api/application/guides/: models.py  routes.py
api/api/domain/: repositories.py
api/api/domain/aggregates/: asset.py  guide.py
api/api/domain/aggregates/asset/: aggregate.py  entities.py
api/api/domain/interfaces/: asset_processor.py  guide_agent.py
api/api/infrastructure/: db.py  repositories.py
api/api/infrastructure/services/: asset_processor.py  guide_agent.py
api/api/infrastructure/services/deliverable/: first_nn.py  training_logs.jsonl
api/api/infrastructure/services/deliverable/Asset Team/: Bins_Asset.py  Block_options_Asset.py  Prompt_template_Asset.py  RL_script_Asset.py  Rubric_Asset.py  biology_document_training.jsonl  history_lecture_training.jsonl  physics_lab_training.jsonl  physics_mechanics_lab.md  sample_biology_textbook.md  tester1.py  wwii_causes_lecture.md
api/api/infrastructure/services/deliverable/First Iteration/: grading_accuracy.py
api/api/infrastructure/services/deliverable/Guide Team/: Bins.py  Block_options_Guide.py  Prompt_template_Guide.py  RL_script.py  Rubric.py  tester.py  tester1.py  tester2.py  tester3.py  training_logs1.jsonl  training_logs2.jsonl  training_logs3.jsonl  training_logs_final.jsonl
app/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
checkpoints/: policy_ep1.pt  (+144 more)
(+46 files in other folders)
